# serializer version: 1
# name: test_custom_apply_filter_in_strategy[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= ?
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %s
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= $1::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= %(sweetness_1)s::INTEGER
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_in_strategy[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE fruit.id IN (
          SELECT fruit.id
            FROM fruit
           WHERE fruit.sweetness >= ?
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-aiosqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= ?
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-asyncmy_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %s
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-asyncpg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= $1::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-async-tracked-psycopg_async_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %(sweetness_1)s::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-sync-tracked-psycopg_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= %(sweetness_1)s::INTEGER
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_custom_apply_filter_sweeter_than[session-sync-tracked-sqlite_engine]
  '''
  SELECT fruit.id
    FROM fruit AS fruit
   WHERE EXISTS (
          SELECT fruit_1.id
            FROM fruit AS fruit_1
           WHERE fruit_1.sweetness >= ?
             AND fruit_1.id = fruit.id
         )
   ORDER BY fruit.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-async-tracked-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > $1::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-async-tracked-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-sync-tracked-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.count_1 > %(param_1)s::INTEGER
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_count_filter[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT count(fruit_1.id) AS count_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.count_1 > ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-async-tracked-aiosqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 >= ?
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-async-tracked-asyncmy_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
   INNER JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 >= %s
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-async-tracked-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 >= $1::FLOAT
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-async-tracked-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 >= %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-sync-tracked-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_1
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS anon_1
      ON TRUE
   WHERE anon_1.sum_1 >= %(param_1)s
   ORDER BY color.id ASC
  '''
# ---
# name: test_declared_aggregate_sum_filter[session-sync-tracked-sqlite_engine]
  '''
  WITH anon_1 AS (
          SELECT sum(fruit_1.sweetness) AS sum_1,
                 fruit_1.color_id AS color_id
            FROM fruit AS fruit_1
           WHERE fruit_1.color_id IS NOT NULL
           GROUP BY fruit_1.color_id
         ) SELECT color.id
    FROM color AS color
    JOIN anon_1
      ON color.id = anon_1.color_id
   WHERE anon_1.sum_1 >= ?
   ORDER BY color.id ASC
  '''
# ---
